# crawl

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  check_commit_existence.py  check_github_projects.py  config.py  crawler_config.docker.yml  crawler_config.example.yml  docker-compose.yml  find_missing_commits.py  gce_rotator.py  github_api_client.py  manage_tokens.py  pyproject.toml  requirements_opt.txt  scanner.py  test_github_features.py  test_import.py  token_pool.py  tokens.example.yml
build_log_scanner/: config.py  scanner.py  scanner_config.example.yml  scanner_config.yml  store.py
enrich/: Dockerfile  consecutive_builds_enrichment.py  extract.ipynb  full_enrichment.py  github_commit_enrichment.py  github_enrichment.py  github_pr_enrichment.py  merge_final_enrichment.py  merge_parquet.py  recalculate_risk_features.py  risk_features_enrichment.py  test_new_contributor.py  test_risk_features.py
output/: test_existing3.csv  test_existing4.csv  test_missing4.csv
